solved "no-video" missing background

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -132,7 +132,7 @@ header{
 .video-and-text-container{
 	position: relative;
 	overflow: hidden;
-	background: image-url("particles.png");
+	background: image-url("https://lh3.googleusercontent.com/IxFmm2tbewFttWdtmn7PLTr5FzJ_HxXl35USCDPzD5k=w1920-no");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
